--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -1,18 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 
-
-
+*{margin: 0;
+padding: 0;}
+body{
+margin: 0;
+padding: 0;
+}
 
 
 
 header{
-    text-align: center;
-    padding: 20px;
-    background-color: #f4f4f4;
+margin: 0;
+text-align: center;
+padding: 20px;
+background-color: #f4f4f4;
 
 
-   }
+}
 
 
 /* --------------------------------------------------------------------------------------------------------------------- */
@@ -29,38 +34,38 @@ margin-right: 1cm;}
 
 
 .nav-item a{
-    font-size: 13pt;
-    color: white;
- 
+font-size: 13pt;
+color: white;
+
 
 }
 
 
 
 .container-fluid {
-    margin: 0;
-    padding: 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #6b3df5;
+margin: 0;
+padding: 10px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+background-color: #6b3df5;
 
 }
 .navbar-toggler:hover {
-    background-color: white;
-    border: none;
+background-color: white;
+border: none;
 
 }
 
 #acaoum a {
-    color: #6b3df5; 
-    text-decoration: none;
+color: #6b3df5; 
+text-decoration: none;
 }
 
 #acaoum  {
-    background-color: #ffffff;
-    color: #6b3df5;
-    border: none;
-    margin: 2px;
-    text-decoration: none;
+background-color: #ffffff;
+color: #6b3df5;
+border: none;
+margin: 2px;
+text-decoration: none;
 }
 
 
@@ -72,37 +77,77 @@ color: black;
 
 main h1{
 
-    color: #6b3df5;
-    text-align: center;
-    background-color: #ffffff;
-    font-family: "Nanum Myeongjo",  normal;
-    font-size: 40pt;
-    }
+color: #6b3df5;
+text-align: center;
+background-color: #ffffff;
+font-family: "Nanum Myeongjo",  normal;
+font-size: 40pt;
+}
 
 /* vamos conversar */
-aside{color: #6b3df5;
-	font-size: 50px;}
+aside {color: #6b3df5;
+font-size: 50px;
+margin-top: 1cm;
+margin-bottom: 1cm;
+}
 
 
-    main {
-	
-       
-        background-color: #f4f4f4;
-       
-        
-    
-    
-    }
+main {
+margin: 0;
+height: 100vh;
+background-color: #f4f4f4;
 
+
+
+
+}
+
+.container{
+margin-bottom: 2cm;
+}
+
+.Formulário-dados label{
+color: #050505;
+font-size: 15px;
+}
+
+.Formulário-dados input{
+width: 40vw;
+height: 5vh;
+border-radius: 3px;
+margin-top: 10px;
+border: 1px solid #6b3df5 ;
+}
+
+.Formulário-dados textarea{
+width: 30vw;
+height: 30vh;
+border-radius: 3px;
+margin-top: 10px;
+border: 1px solid #6b3df5 ;
+margin-bottom: 10px;
+}
+
+.submit input{
+width: 30vw;
+height: 6vh;
+color: #ffffff;
+background-color: #6b3df5;
+border-radius: 3px;
+box-shadow: 0px 0px 10px 0px   rgba(255, 255, 255, 0.9);
+}
+
+.submit input:hover{
+color: #050505;
+}
 
 
 
 /* footer */
 footer{
-    background-color: #6b3df5;
-    box-shadow: 0px 0px 10px 0px   rgba(0, 0, 0, 0.9);
-    margin-top: 1cm;
-    text-align: center;
+background-color: #6b3df5;
+box-shadow: 0px 0px 10px 0px   rgba(0, 0, 0, 0.9);
+text-align: center;
 
 
 
@@ -110,70 +155,71 @@ footer{
 }
 
 .container-rodape{
-    display: grid; 
-    grid-template-columns: auto auto auto ;
-    gap: 10px;
-    padding: 30px;
+display: grid; 
+grid-template-columns: auto auto auto ;
+gap: 10px;
+padding: 30px;
 }
 
 
 .container-rodape a{
-    text-decoration: none;
-	color: #ffffff
+text-decoration: none;
+color: #ffffff
 
 }
 
 .container-rodape a:hover{
-    color: #191414;
+color: #191414;
 
-   
+
 
 }
 
 .nome a{ 
-	margin-right: 10px;
+margin-right: 10px;
 }
 
 .rodapes a{
-	margin-right: 8px;
-	cursor: pointer;
-	transition: transform 0.3s ease;
+margin-right: 8px;
+cursor: pointer;
+transition: transform 0.3s ease;
 }
 
 .rodapes i{
-	
-	cursor: pointer;
-	transition: transform 0.3s ease;
+
+cursor: pointer;
+transition: transform 0.3s ease;
 }
 
 .rodapes i:hover{
-	transform: translateY(-5px); /* Subir 5 pixels quando o mouse passar por cima */
-	
+transform: translateY(-5px); /* Subir 5 pixels quando o mouse passar por cima */
+
 }
 
 #copy{
-	color: #ffffff;
-	background-color: #6b3df5;
-    font-size: 10pt;
-    margin-right: 2cm;
+color: #ffffff;
+font-size: 10pt;
+margin-right: 2cm;
+margin-top: 1cm;
+height: 5vh;
 }
-	
+
 
 
 /* --------------------------------------------------------------------------------------------------------------------- */
 
-  
+
 
 
 
 
 @media only screen and (max-width: 700px) {
- body{
-    margin: 0;
-    padding: 0;
- }
+body{
+margin: 0;
+padding: 0;
+}
 
- .navbar-expand-lg .navbar-collapse 
+.navbar-expand-lg .navbar-collapse 
 {
 margin-left: 0px;
 margin-right: 0px;
@@ -185,22 +231,39 @@ margin-right: 0px;
 
 
 .container-rodape{
-    grid-template-columns: none ;
+grid-template-columns: none ;
 
+
+}
+
+aside {
+font-size: 30px;
 
 }
 
 
 footer{
-    
-    margin-top: 0cm;
+margin-top: 0cm;
 }
 
 
 #copy{
-      
-    margin-right: 0;
+
+margin-right: 0;
 }
+
+
+.Formulário-dados textarea{
+        width: 30vw;
+        height: 10vh;
+        
+}
+.submit input{
+    width: 40vw;
+    
+    }
+    
+   
 }
 
 
